Replace canvas with @napi-rs/canvas for better Vercel compatibility

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "canvas": "^3.2.0",
+    "@napi-rs/canvas": "^0.1.88",
     "html2canvas": "^1.4.1",
     "next": "14.2.35",
     "pg": "^8.13.1",
