--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["npm ci"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "./node_modules/.bin/next start"
+cmd = "./node_modules/.bin/next start -H 0.0.0.0"
 
