--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "start": "npx next start",
-    "start:railway": "npx next start",
+    "start": "next start -H 0.0.0.0",
+    "start:railway": "next start -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
