Disable standalone mode and use next start with full path for Railway

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,11 +2,11 @@
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm ci --production=false"]
+cmds = ["npm ci"]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
-cmd = "node server.js"
+cmd = "npm start"
 
