--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "start": "node server.js",
-    "start:railway": "node server.js",
+    "start": "NODE_ENV=production node_modules/.bin/next start -H 0.0.0.0",
+    "start:railway": "NODE_ENV=production node_modules/.bin/next start -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
