--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.88",
     "html2canvas": "^1.4.1",
-    "next": "14.2.35",
+    "next": "^14.2.35",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
