--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "start": "NODE_ENV=production node_modules/.bin/next start -H 0.0.0.0",
-    "start:railway": "NODE_ENV=production node_modules/.bin/next start -H 0.0.0.0",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.88",
+    "canvas": "^3.2.0",
     "html2canvas": "^1.4.1",
-    "next": "^14.2.35",
+    "next": "14.2.35",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
